--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -22,14 +22,14 @@
   }
   &__nav {
     position: relative;
-    @include mobile {
+    @include tablet {
       margin-left: auto;
     }
   }
   &__nav-burger {
     display: none;
     width: 30px;
-    height: 24px;
+    height: 15px;
     position: relative;
     cursor: pointer;
     &::before,
@@ -54,12 +54,12 @@
     div {
       top: 100%;
     }
-    @include mobile {
+    @include tablet {
       display: block;
     }
   }
   &__nav-wrap {
-    @include mobile {
+    @include tablet {
       position: fixed;
       top: 0;
       right: 0;
@@ -79,7 +79,7 @@
     width: 30px;
     height: 30px;
     cursor: pointer;
-    @include mobile {
+    @include tablet {
       display: block;
     }
   }
@@ -103,11 +103,7 @@
     display: flex;
     gap: 20px;
     @include tablet {
-      gap: 10px;
-    }
-    @include mobile {
       flex-direction: column;
-      gap: 20px;
     }
   }
   &__nav-item {
@@ -120,18 +116,31 @@
       color: $colorYellow;
     }
   }
-  &__icons {
+  &__user-actions {
     display: flex;
+    align-items: center;
     margin-left: 20px;
     gap: 20px;
+  }
+  &__user {
+    display: flex;
+    align-items: center;
+    gap: 10px;
   }
   &__icon {
     width: 24px;
     height: 24px;
     cursor: pointer;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
   .logo {
     margin-right: 20px;
+    @include mobile {
+      margin-right: 10px;
+    }
   }
 }
 .logo {
@@ -140,5 +149,8 @@
   color: $colorGreen2;
   @include tablet {
     font-size: 25px;
+  }
+  @include mobile {
+    font-size: 20px;
   }
 }
