--- a/src/assets/styles/components/_registration.scss
+++ b/src/assets/styles/components/_registration.scss
@@ -1,4 +1,5 @@
 .registration {
+  position: relative;
   &__title {
     text-align: center;
     font-size: 24px;
@@ -9,20 +10,12 @@
     display: flex;
     flex-direction: column;
   }
-  &__input {
-    border: none;
-    border-bottom: 1px solid #000;
-    outline: none;
-    padding: 10px 10px 10px 0;
-    margin-bottom: 10px;
-    font-size: 16px;
-  }
   &__button {
     margin-right: auto;
     margin-left: auto;
   }
-  &__row {
-    margin-top: 20px;
+  &__bottom-line {
+    margin-top: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,5 +33,99 @@
       height: 1px;
       background-color: #000;
     }
+  }
+  &__success {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+  }
+  &__success .registration__title {
+    font-size: 30px;
+  }
+  &__success .registration__link {
+    font-size: 25px;
+    color: $colorGreen2;
+  }
+  &__success .registration__link::after {
+    background-color: $colorGreen2;
+  }
+  &__fail {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: #eee, $alpha: 0.9);
+    z-index: 1;
+  }
+  &__fail-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 100%;
+      height: 2px;
+      background-color: #000;
+    }
+    &::before {
+      transform: translate(-50%, -50%) rotate(-45deg);
+    }
+    &::after {
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
+  }
+}
+
+.input {
+  &-wrapper {
+    margin-bottom: 30px;
+    position: relative;
+  }
+  &-field {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #000;
+    outline: none;
+    padding: 10px 10px 10px 0;
+    font-size: 16px;
+  }
+  &-field.error {
+    border-bottom: 1px solid red;
+  }
+  &-errors {
+    margin-top: 10px;
+  }
+  &-error-msg {
+    color: red;
+  }
+}
+
+.password-toggler {
+  position: absolute;
+  top: 7px;
+  right: 3px;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  img {
+    display: none;
+  }
+  .visible {
+    display: block;
   }
 }
