--- a/src/assets/styles/components/_subscribe.scss
+++ b/src/assets/styles/components/_subscribe.scss
@@ -1,7 +1,7 @@
 .subscribe {
   padding-bottom: 100px;
   .container {
-    background: center / cover url('../src/assets/images/backgrounds/s.jpg') no-repeat;
+    background: center / cover url('/images/backgrounds/subscribe.jpg') no-repeat;
     border-radius: 9px;
     padding: 80px 20px 100px;
   }
