--- a/src/assets/styles/views/_product-page.scss
+++ b/src/assets/styles/views/_product-page.scss
@@ -1,6 +1,10 @@
 .product-page {
   padding-top: 100px;
   padding-bottom: 100px;
+  @include mobile {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
   .top-products .section__title {
     margin-bottom: 60px;
   }
@@ -9,27 +13,45 @@
   &__title {
     font-size: 40px;
     margin-bottom: 40px;
+    @include mobile {
+      font-size: 30px;
+      margin-bottom: 20px;
+    }
   }
   &__body {
     display: flex;
     justify-content: space-between;
-    gap: 100px;
+    gap: 50px;
+    @include tablet {
+      align-items: flex-start;
+      flex-direction: column;
+    }
   }
   &__gallery {
     max-width: 700px;
     height: 400px;
     display: flex;
     gap: 20px;
+    @include mobile {
+      flex-direction: column;
+      height: unset;
+    }
   }
   &__description {
     font-size: 26px;
     margin-bottom: 20px;
+    @include mobile {
+      font-size: 18px;
+    }
   }
   &__price {
     font-size: 36px;
     display: flex;
     gap: 10px;
     margin-bottom: 20px;
+    @include mobile {
+      font-size: 26px;
+    }
   }
   &__price-current {
     font-weight: 700;
@@ -42,6 +64,9 @@
     font-size: 36px;
     font-weight: 700;
     margin-bottom: 10px;
+    @include mobile {
+      font-size: 26px;
+    }
   }
   &__count-buttons {
     display: flex;
@@ -54,6 +79,12 @@
     line-height: 50px;
     border: 1px solid $colorGray;
     cursor: pointer;
+    @include mobile {
+      width: 30px;
+      height: 30px;
+      line-height: 30px;
+      font-size: 20px;
+    }
   }
   &__count-button.disabled {
     pointer-events: none;
@@ -64,17 +95,30 @@
 .gallery {
   &-swiper__main {
     max-width: 400px;
+    @include mobile {
+      max-width: 300px;
+    }
+    @include mobileXS {
+      max-width: 200px;
+    }
     img {
-      width: 400px;
-      height: 400px;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
     }
   }
   &-swiper__thumb {
     width: 100px;
+    @include mobile {
+      width: 100%;
+    }
     img {
       width: 100px;
       height: 100px;
+      @include mobile {
+        width: 50px;
+        height: 50px;
+      }
     }
   }
   &__image-wrap {
