fix banner, cart, menu, subscribe form

--- a/src/assets/styles/common/_variables.scss
+++ b/src/assets/styles/common/_variables.scss
@@ -1,8 +1,9 @@
-$colorDark: #111111;
+$colorText: #282828;
+$colorDark: #1e1e1e;
 $colorLight: #eeeeee;
 $colorGray: #6e6e6e;
 $colorYellow: #f9bf29;
 $colorOrange: #ffa500;
-$colorGreen: #adff2f;
-$colorGreen2: #619b09;
+$colorLime: #adff2f;
+$colorGreen: #619b09;
 $colorMint: #ddffd8;
