--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -20,5 +20,5 @@
 @import 'components/modal';
 @import 'components/registration';
 @import 'components/cart';
-@import 'components/subscribe';
+@import 'components/subscribe-form';
 @import 'components/benefits';
