--- a/src/assets/styles/common/_globals.scss
+++ b/src/assets/styles/common/_globals.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 * {
   padding: 0;
   margin: 0;
@@ -21,8 +23,9 @@ main {
 }
 body {
   font-size: 16px;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Playfair Display', serif;
   line-height: 1.5;
+  color: $colorText;
 }
 ul {
   list-style: none;
@@ -31,4 +34,7 @@ a {
   text-decoration: none;
   color: inherit;
   transition: 0.3s all;
+}
+p {
+  font-family: 'Lato', sans-serif;
 }
