--- a/src/assets/styles/components/_banner.scss
+++ b/src/assets/styles/components/_banner.scss
@@ -1,17 +1,21 @@
 .banner {
   background: top / cover url('/images/backgrounds/banner.jpg') no-repeat;
   .swiper-slide {
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 150px;
+    padding-bottom: 60px;
+    @include tablet {
+      padding-top: 100px;
+      padding-bottom: 100px;
+    }
   }
   .swiper-pagination-fraction,
   .swiper-pagination-custom,
   .swiper-horizontal > .swiper-pagination-bullets,
   .swiper-pagination-bullets.swiper-pagination-horizontal {
-    bottom: 20px;
+    bottom: 50px;
   }
   .swiper-pagination-bullet {
-    background-color: $colorGreen2;
+    background-color: $colorGreen;
     width: 60px;
     border-radius: 5px;
   }
@@ -19,19 +23,83 @@
   .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
     margin: 0 10px;
   }
-  &__content {
-    padding: 20px;
+  &__slide-inner {
     border-radius: 9px;
-    max-width: 750px;
-    background-color: rgba($color: #fff, $alpha: 0.8);
+    background-color: rgba($color: #fff, $alpha: 0.9);
+    display: flex;
+    overflow: hidden;
+    max-height: 550px;
+  }
+  &__image {
+    width: 50%;
+    @include tablet {
+      width: 40%;
+    }
+    @include mobile {
+      display: none;
+    }
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  &__content {
+    width: 50%;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    @include desktop {
+      padding: 40px;
+    }
+    @include tablet {
+      width: 60%;
+      padding: 30px;
+    }
+    @include mobile {
+      width: 100%;
+    }
   }
   &__title {
-    font-size: 60px;
+    font-size: 55px;
+    line-height: 1.1;
     font-weight: 700;
     margin-bottom: 20px;
+    text-transform: capitalize;
+    @include desktop {
+      font-size: 40px;
+      margin-bottom: 15px;
+    }
+    @include tablet {
+      font-size: 32px;
+      line-height: 1.2;
+    }
+  }
+  &__subtitle {
+    font-family: 'Great Vibes', cursive;
+    line-height: 1;
+    margin-bottom: 10px;
+    font-size: 30px;
+    color: $colorGreen;
+    text-transform: capitalize;
+    @include desktop {
+      font-size: 25px;
+    }
+    @include tablet {
+      font-size: 22px;
+    }
   }
   &__text {
-    font-size: 24px;
+    font-size: 22px;
     margin-bottom: 40px;
+    @include desktop {
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+    @include tablet {
+      font-size: 16px;
+    }
   }
 }
