--- a/src/assets/styles/components/_footer.scss
+++ b/src/assets/styles/components/_footer.scss
@@ -37,7 +37,7 @@
     }
   }
   &__nav-title {
-    color: $colorGreen2;
+    color: $colorGreen;
     font-weight: 700;
     font-size: 20px;
     margin-bottom: 20px;
