--- a/src/assets/styles/components/_modal.scss
+++ b/src/assets/styles/components/_modal.scss
@@ -14,7 +14,6 @@
     background-color: rgba($color: #000000, $alpha: 0.5);
   }
   &__content {
-    min-width: 500px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -22,6 +21,13 @@
     background-color: #fff;
     padding: 20px;
     border-radius: 9px;
+    width: 40%;
+    @include desktop {
+      width: 60%;
+    }
+    @include mobile {
+      width: 80%;
+    }
   }
   &__close {
     position: absolute;
