--- a/src/assets/styles/components/_top-products.scss
+++ b/src/assets/styles/components/_top-products.scss
@@ -7,24 +7,60 @@
   }
   &__slider-wrap {
     position: relative;
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      width: 10%;
+      height: calc(100% - 20px);
+      transform: translateY(-50%);
+      border-radius: 20px;
+      z-index: 2;
+      @include mobile {
+        display: none;
+      }
+    }
+    &::before {
+      left: 0;
+      background: linear-gradient(to right, rgba(#fff, 0.8), transparent);
+    }
+    &::after {
+      right: 0;
+      background: linear-gradient(to left, rgba(#fff, 0.8), transparent);
+    }
   }
   .swiper-button-prev,
   .swiper-button-next {
     color: #000;
-  }
-  .swiper {
-    max-width: 90%;
-    padding: 10px;
-    @include mobile {
-      max-width: 80%;
+    width: 60px;
+    height: 60px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba($color: #000000, $alpha: 0.5);
+    border-radius: 50%;
+    transition: 0.3s all;
+    &:hover {
+      box-shadow: 0 0 20px rgba($color: #000000, $alpha: 0.5);
     }
   }
+  .swiper-button-prev::after,
+  .swiper-button-next::after {
+    font-size: 20px;
+  }
+  .swiper {
+    max-width: 100%;
+    padding: 10px 0;
+    overflow: hidden;
+    border-radius: 20px;
+  }
   .swiper-slide {
-    box-shadow: 0 0 10px rgba($color: #000000, $alpha: 0.2);
+    // box-shadow: 0 0 10px rgba($color: #000000, $alpha: 0.2);
     transition: 0.3s all;
     height: 100%;
+    border-radius: 20px;
+    overflow: hidden;
     &:hover {
-      box-shadow: 0 0 10px rgba($color: #000000, $alpha: 0.5);
+      box-shadow: 0 0 10px rgba($color: #000000, $alpha: 0.2);
     }
   }
 }
