--- a/src/assets/styles/common/_globals.scss
+++ b/src/assets/styles/common/_globals.scss
@@ -35,6 +35,6 @@ a {
   color: inherit;
   transition: 0.3s all;
 }
-p {
-  font-family: 'Lato', sans-serif;
-}
+// p {
+//   font-family: 'Lato', sans-serif;
+// }
