--- a/src/assets/styles/common/_variables.scss
+++ b/src/assets/styles/common/_variables.scss
@@ -1,9 +1,12 @@
 $colorText: #282828;
 $colorDark: #1e1e1e;
-$colorLight: #eeeeee;
-$colorGray: #6e6e6e;
 $colorYellow: #f9bf29;
 $colorOrange: #ffa500;
 $colorLime: #adff2f;
 $colorGreen: #619b09;
+$colorLightGreen: #b1ce85;
 $colorMint: #ddffd8;
+$colorLightGray: #e5e7e5;
+$colorLight: #eeeeee;
+$colorGray: #6e6e6e;
+$colorLightPink: #faf7f2;
